# SingleClaw-DMN

./: .env.example  .gitignore  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/: copilot-instructions.md
docs/: architecture.md  guardian_check.md  roadmap.md  skill-packaging.md  skill_spec.md  why_single_agent.md
docs/adr/: 0001-skill-driven-agent-development.md  0002-guardian-before-destructive-actions.md  0003-dmn-memory-reflection-loop.md  0004-memory-context-injection.md  0005-llm-auth-dual-mode.md  0006-v0.3-semantic-memory-search.md  0007-v0.4-skill-ecosystem.md  0008-community-registry-index.md
examples/content_workflow/: README.md
examples/personal_business_os/: README.md
examples/procurement_workflow/: README.md
singleclaw/: __init__.py  cli.py
singleclaw/dmn/: __init__.py  journal.py  memory.py  reflect.py  search.py
singleclaw/guardian/: __init__.py  dry_run.py  policy.py  risk.py
singleclaw/llm/: __init__.py  client.py  config.py  exceptions.py  factory.py  prompt.py
singleclaw/skills/: __init__.py  registry.py  registry_index.py  runner.py  validator.py
singleclaw/workspace/: __init__.py  manager.py
skills/linkedin_post_writer/: input_schema.json  output_schema.json  (+2 more)
tests/: __init__.py  test_cli.py  test_cli_auth.py  test_cli_skills.py  test_dmn.py  test_guardian.py  test_llm_auth_apikey.py  test_llm_auth_oauth.py  test_llm_config.py  test_llm_prompt.py  test_llm_token_store.py  test_memory_search.py  test_registry_index.py  test_skill_registry_entrypoints.py  test_skill_validator.py  test_skills.py  test_workspace.py
(+24 files in other folders)
